--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,7 @@
 [theme]
 base="light"
+primaryColor = "#ff4b4b"
+backgroundColor = "#f0f2f6"  # This only affects some components, not the entire page
+secondaryBackgroundColor = "#ffffff"
+textColor = "#31333f"
+font = "sans serif"
